--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,6 +7,14 @@ html(ng-app='fxApp')
 		//- meta (name="viewport" content="width=device-width, initial-scale=1")
 		//- meta (name="HandheldFriendly" content="true")
 	body(ng-controller='MainViewCtrl')
+		script(type='text/javascript')
+    		ad_idzone = "1111200";
+      		ad_width = "468";
+      		ad_height = "60";
+    	script(type='text/javascript', src='https://ads.exoclick.com/ads.js')
+    	noscript
+      		a(href='http://main.exoclick.com/img-click.php?idzone=1111200', target='_blank')
+        		img(src='https://syndication.exoclick.com/ads-iframe-display.php?idzone=1111200&output=img&type=468x60', width='468', height='60')
 		.Header.col-md-12
 			h2.text-center
 				|	Króna
