--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,7 +7,7 @@ html(ng-app='fxApp')
 		//- meta (name="viewport" content="width=device-width, initial-scale=1")
 		//- meta (name="HandheldFriendly" content="true")
 	body(ng-controller='MainViewCtrl')
-		script(type='text/javascript')
+		script(type='text/javascript').
 			ad_idzone = "1111200";
 			ad_width = "468";
 			ad_height = "60";
